--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="BT_TurnOn">蓝牙功能已开启</string>
     <string name="BT_Not_TurnOn">蓝牙功能未开启</string>
     <string name="Command_Send_Failed">命令发送失败！</string>
+    <string name="Command_Reset">复位</string>
 
 
     <string name="device">Device:</string>
