--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,20 +32,20 @@
     <string name="BT_Not_TurnOn">蓝牙功能未开启</string>
     <string name="Command_Send_Failed">命令发送失败！</string>
     <string name="Command_Reset">复位</string>
-    <string name="BT_Status">更\n新\n状\n态</string>
+    <string name="BT_Status">出\n错\n信\n息</string>
     <string name="Update_Send_Times">更新发射状态</string>
     <string name="Select_Send_Times">选择读取的次数</string>
     <string name="WatchDog_Ongoing">正在读取系统状态，请稍后...</string>
     <string name="WatchDog_Timeout">读取系统状态操作超时！</string>
-    <string name="Device_Time_Settings">系统时间设置</string>
+    <string name="Device_Time_Settings">时间信息</string>
     <string name="Device_Year_Up">20</string>
     <string name="Separator_1"> : </string>
     <string name="Separator_2"> / </string>
 
 
-    <string name="App_Info">版本：0.2.1</string>
-    <string name="Delivery_Date">更新日期：2016-Nov-19</string>
-    <string name="Update_Info">更新内容：\n1，纠正滑动错误；\n2，增添系统信息内容；\n.....</string>
+    <string name="App_Info">版本：0.1.1</string>
+    <string name="Delivery_Date">更新日期：2016-Dec-08</string>
+    <string name="Update_Info">更新内容：\n1，增加自检项目；\n2，查询错误信息；\n3, 增加版本信息.....</string>
     <string name="Help_Info">帮助信息：\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。</string>
 
 
