--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,8 @@
 
 
     <string name="App_Info">版本：0.1.1</string>
-    <string name="Delivery_Date">更新日期：2016-Dec-16</string>
-    <string name="Update_Info">更新内容：\n1，完善参数设置\n2，复位\n3，页面保护防止闪退.....</string>
+    <string name="Delivery_Date">更新日期：2016-Dec-19</string>
+    <string name="Update_Info">更新内容：\n1，修复设备页面切换时状态没更新问题\n2，参数设置T1，T2混淆。.....</string>
     <string name="Help_Info">帮助信息：\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。</string>
 
 
