--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">羿弓力创</string>
+    <string name="app_name">智能手环</string>
     <string name="main_Title">智能手环设定平台</string>
     <string name="Simple_Mode">标准模式</string>
     <string name="Standard_Mode">工程模式</string>
@@ -48,8 +48,8 @@
 
 
     <string name="App_Info">版本：0.1.1</string>
-    <string name="Delivery_Date">更新日期：2017-Jan-20</string>
-    <string name="Update_Info">更新内容：\n1，增强查询状态功能; \n2, 修改标题。</string>
+    <string name="Delivery_Date">更新日期：2017-Jan-21</string>
+    <string name="Update_Info">更新内容：\n1，修复查询状态功能线程保护; \n2, 修改软件名字。</string>
     <string name="Help_Info">帮助信息：\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。</string>
 
 
