--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="Command_Send_Failed">命令发送失败！</string>
     <string name="BT_Component_Null">蓝牙组件未建立！</string>
     <string name="BT_Not_Connected">蓝牙设备还未连接！</string>
-    <string name="Command_Reset">复位</string>
+    <string name="Command_Reset">状态信息清零</string>
     <string name="BT_Status">查询状态信息</string>
     <string name="Update_Send_Times">更新发射状态</string>
     <string name="Select_Send_Times">选择读取的次数</string>
@@ -48,8 +48,8 @@
 
 
     <string name="App_Info">版本：0.1.1</string>
-    <string name="Delivery_Date">更新日期：2017-Feb-15</string>
-    <string name="Update_Info">更新内容：\n1，加强参数设置通知逻辑保护。</string>
+    <string name="Delivery_Date">更新日期：2017-Feb-17</string>
+    <string name="Update_Info">更新内容：\n1，加强状态查询结束时逻辑保护。\n2，参数设置多收信息强制保护措施。</string>
     <string name="Help_Info">帮助信息：\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。</string>
 
 
