--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="title_activity_display">DisplayActivity</string>
     <string name="BT_TurnOn">蓝牙功能已开启</string>
     <string name="BT_Not_TurnOn">蓝牙功能未开启</string>
-    <string name="BT_Service_Null">GATT无相关服务！</string>
+    <string name="BT_Service_Null">GATT服务注册未完成，请稍候！</string>
     <string name="BT_Characteristic_Null">GATT无相关特征值！</string>
     <string name="Command_Send_Failed">命令发送失败！</string>
     <string name="BT_Component_Null">蓝牙组件未建立！</string>
@@ -48,8 +48,8 @@
 
 
     <string name="App_Info">版本：0.1.1</string>
-    <string name="Delivery_Date">更新日期：2017-Feb-20</string>
-    <string name="Update_Info">更新内容：\n1，设置时间成功提示；\n2，音频持续时间可编辑小数。</string>
+    <string name="Delivery_Date">更新日期：2017-Feb-21</string>
+    <string name="Update_Info">更新内容：\n1，优化GATT服务注册与显示时间；\n2，状态清零提示用词；\n3, 压力门限显示宽度。</string>
     <string name="Help_Info">帮助信息：\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。</string>
 
 
