--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,8 +48,8 @@
 
 
     <string name="App_Info">版本：0.1.1</string>
-    <string name="Delivery_Date">更新日期：2017-Feb-21</string>
-    <string name="Update_Info">更新内容：\n1，优化GATT服务注册与显示时间；\n2，状态清零提示用词；\n3, 压力门限显示宽度。</string>
+    <string name="Delivery_Date">更新日期：2017-Feb-25</string>
+    <string name="Update_Info">更新内容：\n1，连接蓝牙后自动读取电池电量和状态自检。</string>
     <string name="Help_Info">帮助信息：\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。</string>
 
 
